minikube/1-namespace.yml
# Agrupa a los servicios, son el orden

apiVersion: v1
kind: Namespace
metadata:
  name: app-parqueadero
