minikube/11-usuarios-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: usuarios:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: jwt-keys
              mountPath: /keys
              readOnly: true
      volumes:
        - name: jwt-keys
          persistentVolumeClaim:
            claimName: jwt-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios
  namespace: app-parqueadero
spec:
  selector:
    app: usuarios
  ports:
    - port: 5000
      targetPort: 5000
