minikube/12-vehiculos-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vehiculos-db
  namespace: app-parqueadero
spec:
  serviceName: vehiculos-db-headless
  replicas: 1
  selector:
    matchLabels:
      app: vehiculos-db
  template:
    metadata:
      labels:
        app: vehiculos-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "admin_user", "-d", "VehiculoDB"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          volumeMounts:
            - name: vehiculos-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: vehiculos-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: vehiculos-db
  namespace: app-parqueadero
spec:
  selector:
    app: vehiculos-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: vehiculos-db-headless
  namespace: app-parqueadero
spec:
  clusterIP: None
  selector:
    app: vehiculos-db
  ports:
    - port: 5432
      targetPort: 5432
