minikube/13-vehiculos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehiculos
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehiculos
  template:
    metadata:
      labels:
        app: vehiculos
    spec:
      containers:
        - name: vehiculos
          image: vehiculos:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: jwt-keys
              mountPath: /keys
              readOnly: true
      volumes:
        - name: jwt-keys
          persistentVolumeClaim:
            claimName: jwt-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vehiculos
  namespace: app-parqueadero
spec:
  selector:
    app: vehiculos
  ports:
    - port: 3000
      targetPort: 3000
