minikube/17-trazabilidad-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trazabilidad
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trazabilidad
  template:
    metadata:
      labels:
        app: trazabilidad
    spec:
      containers:
        - name: trazabilidad
          image: trazabilidad:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          readinessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: jwt-keys
              mountPath: /keys
              readOnly: true
      volumes:
        - name: jwt-keys
          persistentVolumeClaim:
            claimName: jwt-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: trazabilidad
  namespace: app-parqueadero
spec:
  selector:
    app: trazabilidad
  ports:
    - port: 3002
      targetPort: 3002
