minikube/19-ms-audit-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-audit
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-audit
  template:
    metadata:
      labels:
        app: ms-audit
    spec:
      containers:
        - name: ms-audit
          image: ms-audit:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3006
          readinessProbe:
            tcpSocket:
              port: 3006
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: jwt-keys
              mountPath: /keys
              readOnly: true
      volumes:
        - name: jwt-keys
          persistentVolumeClaim:
            claimName: jwt-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ms-audit
  namespace: app-parqueadero
spec:
  selector:
    app: ms-audit
  ports:
    - port: 3006
      targetPort: 3006
