minikube/7b-kong.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-proxy
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-proxy
  template:
    metadata:
      labels:
        app: kong-proxy
    spec:
      containers:
        - name: kong
          image: kong:3.9
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8443
              name: proxy-ssl
            - containerPort: 8001
              name: admin
          readinessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: app-parqueadero
spec:
  selector:
    app: kong-proxy
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: proxy-ssl
      port: 8443
      targetPort: 8443
    - name: admin
      port: 8001
      targetPort: 8001
