minikube/8-swagger-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
        - name: swagger-ui
          image: swaggerapi/swagger-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  namespace: app-parqueadero
spec:
  selector:
    app: swagger-ui
  ports:
    - port: 8080
      targetPort: 8080
