minikube/9-konga.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: app-parqueadero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
        - name: konga
          image: pantsel/konga:latest
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: app-parqueadero
spec:
  selector:
    app: konga
  ports:
    - port: 1337
      targetPort: 1337
